--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@ body {
 	background-color: #222;
 	margin: 0px;
 }
-
 	#stats-container {
 		position: fixed;
 		top: 0px;
@@ -14,13 +13,11 @@ body {
 		border-color: #cd965a;
 		border-left: solid;
 		padding: 20px;
-
 	}
 		.stats-valuse {
 			float: right;
 			color: #d0b79c;
 		}
-
 	#golden-cookie {
 		position: absolute;
 		width: 100px;
@@ -34,8 +31,7 @@ body {
 		-webkit-user-select: none;
 		-ms-user-select: none;
 		filter: drop-shadow(0 0 0.75rem #DAA520	);
-			animation: spin 4s linear infinite;
-
+		animation: spin 4s linear infinite;
 	}
 
 	#cookie-container {
@@ -50,7 +46,6 @@ body {
 		-webkit-margin-before: 0em;
     	-webkit-margin-after: 0em;
 	}
-
 		#record {
 			position: absolute;
 			color: #cd965a;
@@ -77,7 +72,6 @@ body {
 			overflow: hidden;
 			animation: spin 4s linear infinite;
 
-			
 			user-drag: none; 
 			user-select: none;
 			-moz-user-select: none;
@@ -85,15 +79,13 @@ body {
 			-webkit-user-select: none;
 			-ms-user-select: none;
 
-
 			filter: drop-shadow(0 0 0.75rem crimson);
 		}
 		.cookie:hover {
-			filter: brightness(110%) drop-shadow(0 0 0.75rem #ff3737);;
+			filter: brightness(110%) drop-shadow(0 0 0.75rem #ff3737);
 		}
 		.cookie:active {
-			filter: brightness(120%) drop-shadow(0 0 0.75rem #ff6565);;
-			
+			filter: brightness(120%) drop-shadow(0 0 0.75rem #ff6565);
 			/*transform: translate(10px, 10px);*/
 		}
 		#clicks {
@@ -101,6 +93,4 @@ body {
 			margin-top: 150px;
 			font-size: 50px;
 			color: orange;
-
-			YAKSHEMASH
 		}
